--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Sammy Stoll
 description: DREAM Project 2023
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/sammystoll/jekyll-now/master/images/Sammy Stoll Headshot.jpeg
 
 #
 # Flags below are optional
